--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,10 @@ main {
   header {
     height: 100vh;
   }
+  /* Review Section */
+  #review {
+    margin-top: 80px;
+  }
 }
 @media (max-width: 992px) {
   /* Header section */
@@ -130,6 +134,10 @@ main {
   .hero-container button {
     margin-top: 20px;
   }
+  /* Review Section */
+  #review .second p {
+    font-size: 30px;
+  }
 }
 @media (max-width: 768px) {
   /* Hero Section */
@@ -146,10 +154,28 @@ main {
   .hero-container button {
     margin-top: 5px;
   }
+  /* Review Section */
+  #review {
+    margin-top: 80px;
+  }
+  #review .first img {
+    width: 32px;
+  }
+  #review .second p {
+    font-size: 20px;
+  }
+  #review .third img {
+    width: 50px;
+  }
+  /* About Section */
 }
 @media (max-width: 520px) {
   /* Hero  */
   .hero-container p {
     padding: 0px 50px;
+  }
+  /* Review */
+  #review {
+    margin-top: 80px;
   }
 }
